updated demo files

--- a/demo_uc1.ipynb
+++ b/demo_uc1.ipynb
@@ -2,21 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
+    "os.environ[\"env\"] = \"dev\"\n",
+    "os.environ[\"AWS_PROFILE\"] = \"riyaz\"\n",
     "import json\n",
     "import subprocess\n",
     "import uuid\n",
     "import IPython.display as ipd\n",
-    "from playlist_copilot.utils.smp_utils import get_track_info"
+    "from playlist_copilot.utils.smp_utils import get_track_info\n",
+    "from recommendation_wrapper import order_by_similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,41 +55,92 @@
     "        json_for_audio_playback.append(track_json)\n",
     "        n+=1\n",
     "    with open(f'{filename}.json', 'w') as file:\n",
-    "        json.dump(json_for_audio_playback, file, indent=4)"
+    "        json.dump(json_for_audio_playback, file, indent=4)\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Pop\n",
-    "# Taylor Swift | I Knew You Were Trouble. | Red\n",
-    "test_1 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/72jCZdH0Lhg93z6Z4hBjgj.mp3'\n",
+    "# Taylor Swift | The Outside | Taylor Swift\n",
+    "test_1 = '/datasets/universal-music-group-dataset/audio/1U6riPmEZzICc3NVAlxihh.mp3'\n",
     "\n",
-    "# Folk Rock / Alternative Rock\n",
-    "# Mumford & Sons | White Blank Page | Sigh No More\n",
-    "test_2 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/14rApQTKycs9gNg7hjm9m7.mp3'\n",
+    "# Pop\n",
+    "# Ellie Goulding | Human | Bright Lights\n",
+    "test_2 = '/datasets/universal-music-group-dataset/audio/7l6cyr5rzGRbsTLONoPOHR.mp3'\n",
     "\n",
-    "# Electronic\n",
-    "# Skrillex | Scary Monsters And Nice Sprites - Noisia Remix | Scary Monsters and Nice Sprites\n",
-    "test_3 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/5bPokvOlgW9dRySVnVmyJ9.mp3'\n",
+    "# Pop\n",
+    "# Busted | Year 3000 | Busted\n",
+    "test_3 = '/datasets/universal-music-group-dataset/audio/0zjB7ewBWnMgQDMQpFzt92.mp3'\n",
     "\n",
-    "# Hip Hop\n",
-    "# Lil Wayne | Believe Me | Believe Me\n",
-    "test_4 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/6t2eIONH4Sax3R21QWiKNp.mp3'\n",
+    "# Hip Hop / Rap\n",
+    "# Nicki Minaj | Regret In Your Tears | Regret In Your Tears\n",
+    "test_4 = '/datasets/universal-music-group-dataset/audio/5x8W6iNXDCQrHp1DF5j4UW.mp3'\n",
     "\n",
-    "# Instrumental (western classical)\n",
-    "# Erik Satie | Douze petits chorals: Choral No. 11 | Erik Satie\n",
-    "test_5 = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/3Eem3JXrDvyKc9ikXijukv.mp3'\n"
+    "# Hop Hop / Rap\n",
+    "# 50 Cent | Straight To The Bank | Curtis\n",
+    "test_5 = '/datasets/universal-music-group-dataset/audio/3tFI8AEosXedl4jEQwwwSg.mp3'\n",
+    "\n",
+    "# Rock\n",
+    "# Guns N' Roses | Coma | Use Your Illusion I\n",
+    "test_6 = '/datasets/universal-music-group-dataset/audio/34Lo0oc0QDJ1wlepfnWHQI.mp3'\n",
+    "\n",
+    "# Orchestral\n",
+    "# George Frideric Handel | Water Music Suite No.1 in F, HWV 348: 9. (Andante) | Handel: Water Music\n",
+    "test_7 = '/datasets/universal-music-group-dataset/audio/0HeK9VsxEJZ8QOQozHJSJY.mp3'\n",
+    "\n",
+    "# Jazz\n",
+    "# Quincy Jones | Theme From \"The Anderson Tapes\" | Smackwater Jack\n",
+    "test_8 = '/datasets/universal-music-group-dataset/audio/1qupALx3nHbzBCS3WIEQZ6.mp3'\n",
+    "\n",
+    "# Pop\n",
+    "# Justin Bieber | We Are | Purpose\n",
+    "test_9 = '/datasets/universal-music-group-dataset/audio/7isWH8NT7djPZw5HWlbiun.mp3'\n",
+    "\n",
+    "# Pop\n",
+    "# Nelly Furtado | Showtime | Loose\n",
+    "test_10 = '/datasets/universal-music-group-dataset/audio/4cfj6rhDqIgOa9upIYBfl2.mp3'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "40048 MP3s\n",
+      "Outfile playlist: aa1f2fdb-36a8-4f68-ac13-e7949d0eefca.m3u\n",
+      "Input song selected: /datasets/universal-music-group-dataset/audio/1U6riPmEZzICc3NVAlxihh.mp3\n",
+      "Requested 30 songs\n",
+      "\n",
+      " ---- RECOMMENDATIONS ---- \n",
+      "\n",
+      "Taylor Swift | The Outside | Taylor Swift\n",
+      "Josh Kelley | Don't You Go | Georgia Clay\n",
+      "Reba McEntire | When You Love Someone Like That | Reba Duets\n",
+      "Rascal Flatts | Words I Couldn't Say | Me And My Gang\n",
+      "Rascal Flatts | I Feel Bad | Me And My Gang\n",
+      "Trisha Yearwood | I Would've Loved You Anyway | Inside Out\n",
+      "Sugarland | One Blue Sky | Enjoy The Ride\n",
+      "Gary Allan | Her Man | Used Heart For Sale\n",
+      "Eros Ramazzotti | Il Viaggio | Perfetto\n",
+      "Rod Stewart | Can We Stay Home Tonight? | Another Country\n",
+      "Jessie J | Harder We Fall | Alive\n",
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "Outfile: filtered_aa1f2fdb-36a8-4f68-ac13-e7949d0eefca.m3u\n"
+     ]
+    }
+   ],
    "source": [
     "# USE CASE 1:= Starting from a single seed song\n",
     "\n",
@@ -94,9 +148,9 @@
     "input_file = test_1\n",
     "\n",
     "# Additional parameters, if needed\n",
-    "num_songs = '15'  # Number of songs in the playlist\n",
+    "num_songs = '30'  # Number of songs in the playlist\n",
     "noise = '0'   # Amount of noise in the playlist (default 0)\n",
-    "lookback = '4' # Amount of lookback in the playlist (default 3)\n",
+    "lookback = '5' # Amount of lookback in the playlist (default 3)\n",
     "\n",
     "# Path to Python script\n",
     "script = 'Deej-A.I.py'\n",
@@ -106,7 +160,7 @@
     "output_file = str(uuid.uuid4()) + '.m3u'\n",
     "\n",
     "# Construct the command as a list\n",
-    "command = ['python', script, 'Pickles', mp3tovec, '--playlist', output_file,\n",
+    "command = ['python', script, 'UMGPickles', mp3tovec, '--playlist', output_file,\n",
     "           '--nsongs', num_songs, '--noise', noise, '--lookback', lookback,\n",
     "           '--inputsong', input_file]\n",
     "\n",
@@ -117,7 +171,24 @@
     "\n",
     "# Read the .m3u file and get the MP3 file paths\n",
     "mp3_file_paths = read_m3u(m3u_file_path)\n",
-    "print_playlist_songnames(mp3_file_paths, os.path.splitext(m3u_file_path)[0])"
+    "\n",
+    "rec1_ids = []\n",
+    "for path in mp3_file_paths:\n",
+    "    rec1_ids.append(os.path.splitext(os.path.basename(path))[0])\n",
+    "\n",
+    "# print_playlist_songnames(mp3_file_paths, os.path.splitext(m3u_file_path)[0])\n",
+    "\n",
+    "filtered_ids = order_by_similarity(rec1_ids, 10)\n",
+    "filtered_m3u_filepath = f\"filtered_{output_file}\"\n",
+    "filtered_paths = [input_file]\n",
+    "for id in filtered_ids:\n",
+    "    line = f'/datasets/universal-music-group-dataset/audio/{id}.mp3'\n",
+    "    filtered_paths.append(line)\n",
+    "\n",
+    "print('\\n ---- RECOMMENDATIONS ---- \\n')\n",
+    "print_playlist_songnames(filtered_paths, os.path.splitext(filtered_m3u_filepath)[0])\n",
+    "print('\\n\\n\\n')\n",
+    "print(f'Outfile: {filtered_m3u_filepath}')"
    ]
   },
   {
@@ -125,7 +196,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -144,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
