--- a/demo_uc2.ipynb
+++ b/demo_uc2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,20 +63,23 @@
    "source": [
     "# Sample input files defined\n",
     "\n",
-    "# Hip-hop\n",
-    "# T-Pain | Bartender | Epiphany\n",
-    "# Lil Wayne | Believe Me | Believe Me\n",
-    "# Sage The Gemini | Don't You | Remember Me\n",
-    "# NISSIM | A Million Years | Lemala\n",
-    "# Lil Durk | Money Walk | Lil Durk 2X\n",
+    "# Rock\n",
+    "# U2 | The Hands That Built America (Theme From Gangs Of New York) | The Best Of 1990-2000\n",
+    "# The Velvet Underground | Black Angel's Death Song - Album Version (Mono) | The Velvet Underground & Nico 45th Anniversary\n",
+    "# U2 | Grace | All That You Can't Leave Behind\n",
     "tf_1 = 'tracks_1.txt'\n",
     "\n",
+    "# Jazz\n",
+    "# Frank Sinatra | On The Road To Mandalay - 1998 Digital Remaster | Come Fly With Me\n",
+    "# Frank Sinatra | I Can't Get Started | Frank Sinatra\n",
+    "# Fred Astaire | You're Easy To Dance With | 100 Crooner Classics\n",
+    "tf_2 = 'tracks_2.txt'\n",
+    "\n",
     "# Pop\n",
-    "# José González | Teardrop | In Our Nature\n",
-    "# Swim Season | Flicker | Cascades\n",
-    "# Hilary Duff | Beat Of My Heart | Most Wanted\n",
-    "# The Vamps | Hurricane | Meet The Vamps\n",
-    "tf_2 = 'tracks_2.txt'"
+    "# Jennifer Lopez | Live It  Up | Live It Up\n",
+    "# Rihanna | What Now | Unapologetic\n",
+    "# Selena Gomez | Come & Get It | Stars Dance\n",
+    "tf_3 = 'tracks_3.txt'"
    ]
   },
   {
@@ -87,15 +90,15 @@
    "source": [
     "# USE CASE 2:= Starting from a set of songs\n",
     "\n",
-    "input_tracks_file = tf_1\n",
+    "input_tracks_file = tf_3\n",
     "\n",
     "# Additional parameters, if needed\n",
-    "n = '8'  # Number of songs between each song in input_tracks_file\n",
+    "n = '5'  # Number of songs between each song in input_tracks_file\n",
     "randomness = '0'   # Degree of randomness in the playlist (default 0) [0-1]\n",
     "\n",
     "output_playlist_file = str(uuid.uuid4()) + '.m3u'\n",
     "script_2 = 'Join_the_dots.py'\n",
-    "mp3tovec_2 = 'Pickles/mp3tovecs/mp3tovec.p'\n",
+    "mp3tovec_2 = 'UMGPickles/mp3tovecs/mp3tovec.p'\n",
     "\n",
     "# Construct the command as a list\n",
     "command_3 = ['python', script_2, mp3tovec_2, '--noise', randomness,\n",
@@ -103,6 +106,8 @@
     "            output_playlist_file, n]\n",
     "\n",
     "result = subprocess.run(command_3, stdout=subprocess.PIPE, stderr=subprocess.PIPE, text=True)\n",
+    "\n",
+    "print(result)\n",
     "\n",
     "# Read the .m3u file and get the MP3 file paths\n",
     "mp3_file_paths = read_m3u(output_playlist_file)\n",
@@ -134,7 +139,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
