--- a/random.ipynb
+++ b/random.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,9 +12,216 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3agRXJIhv7yXdnsEHQxN3g.mp3\n",
+      "Bill Monroe & His Blue Grass Boys | Goodbye Old Pal - 1957 Version | The Very Best Of Bill Monroe And His Blue Grass Boys\n",
+      "\n",
+      "\n",
+      "1OSbMxkKSLhpWp7zhDRmuD.mp3\n",
+      "38 Special | You're The Captain | Rockin' Into The Night\n",
+      "\n",
+      "\n",
+      "1HHgxt9q8PFc4oaJUuiovg.mp3\n",
+      "Owl City | Unbelievable | Mobile Orchestra\n",
+      "\n",
+      "\n",
+      "4WNegjB8eSeJsxhmEWiBQQ.mp3\n",
+      "The Fratellis | Vince The Loveable Stoner | Costello Music\n",
+      "\n",
+      "\n",
+      "2G2yCpsqkcoozrzvvsRbd8.mp3\n",
+      "Konkrete | Lovin' This | Big Boi Presents... Got Purp? Vol. 2\n",
+      "\n",
+      "\n",
+      "5KVWBH5yV4zEbFuNyReAgI.mp3\n",
+      "James Newton Howard | Your Favorite Color is Green - From \"The Hunger Games: Mockingjay, Part 2\" Soundtrack | The Hunger Games: Mockingjay, Part 2\n",
+      "\n",
+      "\n",
+      "16dfwRc6TjljmR8gDyqNvf.mp3\n",
+      "Michael Giacchino | I Hate My Life | Jupiter Ascending (Original Motion Picture Soundtrack)\n",
+      "\n",
+      "\n",
+      "4QhWbupniDd44EDtnh2bFJ.mp3\n",
+      "Frank Ocean | Pyramids | channel ORANGE\n",
+      "\n",
+      "\n",
+      "6YKO3L4ZvoOA5v4mV7fV6Q.mp3\n",
+      "Darius Rucker | Take Me Home | True Believers\n",
+      "\n",
+      "\n",
+      "1BDzp3EN4oDGZTGb3ZeRsg.mp3\n",
+      "Emitt Rhodes | Textile Factory | The American Dream\n",
+      "\n",
+      "\n",
+      "3NSnGpJL902wG2QUkt9CsT.mp3\n",
+      "Muddy Waters | Tom Cat | Electric Mud\n",
+      "\n",
+      "\n",
+      "2Bw9pgOLOYXKxrKWbBxovj.mp3\n",
+      "The Free Design | The Proper Ornaments - Bonus Track - Mono Version | Kites Are Fun\n",
+      "\n",
+      "\n",
+      "0croVY19mnuq07RKfbSPfO.mp3\n",
+      "Jon Pardi | Chasin' Them Better Days | Write You A Song\n",
+      "\n",
+      "\n",
+      "0Z0nHUytPGAxB5L4So5Y3F.mp3\n",
+      "Liza Minnelli | Maybe This Time | The Collection\n",
+      "\n",
+      "\n",
+      "7ivH2aJEJqhwOhAoeaV1De.mp3\n",
+      "Lights | Toes - Acoustic | Siberia\n",
+      "\n",
+      "\n",
+      "5zPCPeoU67XQdscQXxWHT4.mp3\n",
+      "Young Zee | That's My Nigga Fo' Real - Soundtrack Version | 8 Mile\n",
+      "\n",
+      "\n",
+      "5yoLjHaSg5Xn5WJEQW6eZX.mp3\n",
+      "Ice Cube | Rollin' Wit The Lench Mob | AmeriKKKa's Most Wanted\n",
+      "\n",
+      "\n",
+      "0oohMBoJ7gLgUBVHLpBbnF.mp3\n",
+      "Craig Armstrong | This Love | The Space Between Us\n",
+      "\n",
+      "\n",
+      "3biMQVil52sKP7Rwj8o7Rb.mp3\n",
+      "The Naked And Famous | The Sun | Passive Me, Aggressive You\n",
+      "\n",
+      "\n",
+      "35r28RDot7nPE7y9K9H7l0.mp3\n",
+      "Post Malone | Feeling Whitney | Stoney\n",
+      "\n",
+      "\n",
+      "1HNVGw472sKr3TeiECwmIH.mp3\n",
+      "Neil Diamond | Forever In Blue Jeans | You Don't Bring Me Flowers\n",
+      "\n",
+      "\n",
+      "5UKlxzRzkakL0zPNZ98NqO.mp3\n",
+      "Billy Ray Cyrus | Wher'm I Gonna Live? | Some Gave All\n",
+      "\n",
+      "\n",
+      "52T0vVx5NHSYY9rDnfHiIE.mp3\n",
+      "Steve Reich | Music for 18 Musicians: Section IV | Music for 18 Musicians\n",
+      "\n",
+      "\n",
+      "1aQGlZalUbEJSC7gHXTUUw.mp3\n",
+      "Rodney Carrington | Rhymes With Truck | King Of The Mountains\n",
+      "\n",
+      "\n",
+      "31A4iLHpYV4n3VTVtlpmwP.mp3\n",
+      "The Free Design | When Love Is Young | Kites Are Fun\n",
+      "\n",
+      "\n",
+      "17sn00z8VEiRJuW6eJrlSq.mp3\n",
+      "April Wine | I Like To Rock - 1991 Digital Remaster | Harder . . . Faster\n",
+      "\n",
+      "\n",
+      "01qCSzIzJ38KXnX30RycAP.mp3\n",
+      "Styx | Eddie | Cornerstone\n",
+      "\n",
+      "\n",
+      "2y6qryg1chppjGIJLuDR51.mp3\n",
+      "Nitty Gritty Dirt Band | Santa Rosa - 2003 - Remaster; | Uncle Charlie And His Dog Teddy\n",
+      "\n",
+      "\n",
+      "1rh8XainzN2eJ8z6mFtQWk.mp3\n",
+      "Jay & The Americans | H.I.S. Slacks - Radio Spot | Come A Little Bit Closer\n",
+      "\n",
+      "\n",
+      "1VvOD6Vhshi5kfXQMpp6xp.mp3\n",
+      "Bon Jovi | Let It Rock | Slippery When Wet\n",
+      "\n",
+      "\n",
+      "3PWlR01JjQ3djhk8tU36yX.mp3\n",
+      "B-Movie | Nowhere Girl | 200 Cigarettes\n",
+      "\n",
+      "\n",
+      "5Vj3vRdsTNRhWFz0GEpEjZ.mp3\n",
+      "JT Money | On Da Grind | Pimpin' On Wax\n",
+      "\n",
+      "\n",
+      "7o7E1nrHWncYY7PY94gCiX.mp3\n",
+      "The Buggles | Video Killed The Radio Star | The Age Of Plastic\n",
+      "\n",
+      "\n",
+      "3Q2ljXYcqnpKWFHgWvxTvr.mp3\n",
+      "Keith Jarrett | Victoria | The Impulse Years 1973-1974\n",
+      "\n",
+      "\n",
+      "2T1KIjk0jblquN5EI8lsJK.mp3\n",
+      "Luke Bryan | Night One | Spring Break...Checkin' Out\n",
+      "\n",
+      "\n",
+      "1lDyt9ChoL0zLM4z8hVyde.mp3\n",
+      "Luis Fonsi | Cuando Me Dejes De Amar | 8\n",
+      "\n",
+      "\n",
+      "2km4MlO02Ij4D53CDOl9rY.mp3\n",
+      "she | Prismatic | Abyss\n",
+      "\n",
+      "\n",
+      "2jzrjjpbl1a0ENASlNUQIL.mp3\n",
+      "Soundgarden | Rowing | King Animal\n",
+      "\n",
+      "\n",
+      "03OArDwBMEgtTDcty84Rcp.mp3\n",
+      "Engelbert Humperdinck | The Last Waltz | The Last Waltz\n",
+      "\n",
+      "\n",
+      "0QzcNgj1yvIk75dh6jpoXL.mp3\n",
+      "Rise Against | Methadone | The Black Market\n",
+      "\n",
+      "\n",
+      "1UWyfK84h7uPHMEPf8qba2.mp3\n",
+      "Lenny Kravitz | More Than Anything In This World | Mama Said\n",
+      "\n",
+      "\n",
+      "3AVJQh3QznKNHLn0QeW2Ih.mp3\n",
+      "DMX | Fame - Album Version (Edited) | ...And Then There Was X\n",
+      "\n",
+      "\n",
+      "3Bg9tG97H75VhfPId5URez.mp3\n",
+      "DEV | In My Trunk | The Night The Sun Came Up\n",
+      "\n",
+      "\n",
+      "4Fsiyn3kc6KEz2Z2IkAvH4.mp3\n",
+      "Frank Sinatra | What Makes the Sunset | Frank Sinatra\n",
+      "\n",
+      "\n",
+      "1cm9YkltukLDKvSCxBkAB2.mp3\n",
+      "John Mellencamp | What Kind Of Man Am I | Sad Clowns & Hillbillies\n",
+      "\n",
+      "\n",
+      "4s9MBsOC7ntOehwpH0EJLL.mp3\n",
+      "Of Monsters and Men | Your Bones | My Head Is An Animal\n",
+      "\n",
+      "\n",
+      "2HF0ggmNtjitQ6uCIBKd3I.mp3\n",
+      "Wilkinson | Heartbeat | Lazers Not Included\n",
+      "\n",
+      "\n",
+      "72YnNlG0na7Op3AbSR2qXz.mp3\n",
+      "NERO | Departure | Welcome Reality\n",
+      "\n",
+      "\n",
+      "172ei6vUx5O1ULWXv36cWF.mp3\n",
+      "The Starting Line | The Drama Summer | Say It Like You Mean It\n",
+      "\n",
+      "\n",
+      "2WDO297ZIIYGnOOiGq0eZC.mp3\n",
+      "Lil Jon | Machuka | Crunk Rock\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import random\n",
@@ -40,10 +247,10 @@
     "    #display(ipd.Audio(path))\n",
     "\n",
     "# Replace with your directory path\n",
-    "directory_path = '/home/aditi/Code/tech/playlist-copilot/data/spotify-million-playlists/audio/'\n",
+    "directory_path = '/datasets/universal-music-group-dataset/audio/'\n",
     "\n",
     "# Number of random files you want\n",
-    "n = 50\n",
+    "n = 100\n",
     "\n",
     "# Get random MP3 files\n",
     "random_files = random_mp3_files(directory_path, n)\n",
@@ -53,14 +260,22 @@
     "    play_mp3_file(each_file)\n",
     "    print(\"\\n\")\n",
     "\n",
-    "#print(random_files)\n"
+    "# print(random_files)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files containing the string: ['_home_aditi_Code_tech_playlist-copilot_data_spotify-million-playlists_audio_7isWH8NT7djPZw5HWlbiun.p', '_datasets_universal-music-group-dataset_audio_7isWH8NT7djPZw5HWlbiun.p']\n"
+     ]
+    }
+   ],
    "source": [
     "def check_files_for_string(directory, string):\n",
     "    # List all files in the directory\n",
@@ -75,7 +290,7 @@
     "directory_path = '/home/aditi/Code/tech/playlist-copilot/Deej-AI/Pickles/'\n",
     "\n",
     "# Replace with the string you want to search for\n",
-    "search_string = '5bPokvOlgW9dRySVnVmyJ9'\n",
+    "search_string = '7isWH8NT7djPZw5HWlbiun'\n",
     "\n",
     "# Get files that contain the string\n",
     "files_with_string = check_files_for_string(directory_path, search_string)\n",
@@ -84,6 +299,68 @@
     "    print(\"Files containing the string:\", files_with_string)\n",
     "else:\n",
     "    print(\"No files found containing the string.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Filtered TSV file created successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Read the 70k metadata dump and filter it down to audios present in the data folder\n",
+    "\n",
+    "import os\n",
+    "import csv\n",
+    "\n",
+    "# Function to read the existing TSV file and filter out entries for songs present in the directory\n",
+    "def filter_tsv(directory_path, tsv_file_path):\n",
+    "    # Get a set of all mp3 files in the directory\n",
+    "    mp3_files = set(filename.split('.')[0] for filename in os.listdir(directory_path) if filename.endswith('.mp3'))\n",
+    "\n",
+    "    # Read the existing TSV file and filter entries for songs present in the directory\n",
+    "    filtered_entries = []\n",
+    "    with open(tsv_file_path, 'r', newline='', encoding='utf-8') as tsvfile:\n",
+    "        reader = csv.reader(tsvfile, delimiter='\\t')\n",
+    "        for row in reader:\n",
+    "            song_id = row[0]\n",
+    "            if song_id in mp3_files:\n",
+    "                filtered_entries.append(row)\n",
+    "\n",
+    "    return filtered_entries\n",
+    "\n",
+    "# Function to write the filtered entries into a new TSV file\n",
+    "def write_filtered_tsv(filtered_entries, output_tsv_file):\n",
+    "    with open(output_tsv_file, 'w', newline='', encoding='utf-8') as tsvfile:\n",
+    "        writer = csv.writer(tsvfile, delimiter='\\t')\n",
+    "        for entry in filtered_entries:\n",
+    "            writer.writerow(entry)\n",
+    "\n",
+    "# Example usage\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Directory containing audio files\n",
+    "    directory_path = \"/datasets/universal-music-group-dataset/audio\"\n",
+    "\n",
+    "    # Path to the existing TSV file\n",
+    "    tsv_file_path = \"/datasets/universal-music-group-dataset/audio/umg-dataset.tsv\"\n",
+    "\n",
+    "    # Path to the output TSV file\n",
+    "    output_tsv_file = \"/datasets/universal-music-group-dataset/audio/umg-dataset-40k.tsv\"\n",
+    "\n",
+    "    # Filter the TSV entries based on audio files present in the directory\n",
+    "    filtered_entries = filter_tsv(directory_path, tsv_file_path)\n",
+    "\n",
+    "    # Write the filtered entries into a new TSV file\n",
+    "    write_filtered_tsv(filtered_entries, output_tsv_file)\n",
+    "\n",
+    "    print(\"Filtered TSV file created successfully.\")\n"
    ]
   },
   {
@@ -110,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
