--- a/demo_uc3.ipynb
+++ b/demo_uc3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,17 +57,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sample input\n",
     "\n",
     "# Warmup: Imagine Dragons | I Don’t Know Why | Evolve\n",
-    "# Workout: Prince Royce | Already Missing You | Soy el Mismo\n",
-    "# Cooldown: Ed Sheeran | English Rose | x\n",
+    "# Workout: Aqua | My Oh My | Aquarium\n",
+    "# Cooldown: Neil Diamond | Walk on Water | Moods\n",
     "\n",
-    "tf_3 = 'tracks_3.txt'"
+    "tf_4 = 'tracks_4.txt'"
    ]
   },
   {
@@ -78,7 +78,7 @@
    "source": [
     "# USE CASE 3:= Creating a pathway between some selected songs\n",
     "\n",
-    "input_tracks_file = tf_3\n",
+    "input_tracks_file = tf_4\n",
     "\n",
     "# Additional parameters, if needed\n",
     "n = '10'  # Number of songs between each song in input_tracks_file\n",
@@ -125,7 +125,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
